Able to link an external collection inside another linked collection, causes data loss #119142

Closed
opened 2024-03-07 04:17:26 +01:00 by Albert-OShea · 1 comment

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-03-05 20:16, hash: 49c723e1176a

Short description of error
When linking a collection from an external library, and you have another linked collection already selected in the outliner, the new linked collection gets placed into the existing linked collection. This shouldn't be possible, and there are already safeguards against doing this in a different way, e.g. when trying to move/link the collection using drag-and-drop in the outliner, it won't let you do it. If you do manage to get it inside the existing linked collection, the new linked collection will disappear on reload of the blend file.

Exact steps for others to reproduce the error

  • Download the two attached blend files, open main.blend
  • Collection 1 is already linked into this file from library.blend. Select this collection in the outliner.
  • File > Link, select library.blend, turn OFF the option Instance Collections, then select the collection Collection 2 to link.
  • Collection 2 is now linked inside Collection 1.
  • Save and reload the file. Collection 2 is gone.
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.1.0 Beta, branch: blender-v4.1-release, commit date: 2024-03-05 20:16, hash: `49c723e1176a` **Short description of error** When linking a collection from an external library, and you have another linked collection already selected in the outliner, the new linked collection gets placed into the existing linked collection. This shouldn't be possible, and there are already safeguards against doing this in a different way, e.g. when trying to move/link the collection using drag-and-drop in the outliner, it won't let you do it. If you do manage to get it inside the existing linked collection, the new linked collection will disappear on reload of the blend file. **Exact steps for others to reproduce the error** - Download the two attached blend files, open `main.blend` - `Collection 1` is already linked into this file from `library.blend`. Select this collection in the outliner. - `File > Link`, select library.blend, turn OFF the option `Instance Collections`, then select the collection `Collection 2` to link. - `Collection 2` is now linked inside `Collection 1`. - Save and reload the file. `Collection 2` is gone.
Albert-OShea added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-03-07 04:17:27 +01:00
Member

Hi, thanks for the report. Can confirm. I think if destination collection is linked/overrided then we can try linking in its parent collection.
Will check.

Hi, thanks for the report. Can confirm. I think if destination collection is linked/overrided then we can try linking in its parent collection. Will check.
Pratik Borhade added
Module
User Interface
Status
Confirmed
Interest
Core
and removed
Status
Needs Triage
labels 2024-03-07 05:49:06 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-08 12:23:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119142
No description provided.