source/blender/blenkernel/intern/collection.c
@@ -1002,8 +1002,8 @@ static void collection_tag_update_parent_recursive(Main *bmain,
   }
 }
 
-static Collection *collection_parent_editable_find_recursive(const ViewLayer *view_layer,
-                                                             Collection *collection)
+Collection *BKE_collection_parent_editable_find_recursive(const ViewLayer *view_layer,
+                                                          Collection *collection)
 {
   if (!ID_IS_LINKED(collection) && !ID_IS_OVERRIDE_LIBRARY(collection) &&
       (view_layer == NULL || BKE_view_layer_has_collection(view_layer, collection))) {
@@ -1025,7 +1025,7 @@ static Collection *collection_parent_editable_find_recursive(const ViewLayer *vi
       }
       return collection_parent->collection;
     }
-    Collection *editable_collection = collection_parent_editable_find_recursive(
+    Collection *editable_collection = BKE_collection_parent_editable_find_recursive(
         view_layer, collection_parent->collection);
     if (editable_collection != NULL) {
       return editable_collection;
@@ -1136,7 +1136,7 @@ bool BKE_collection_viewlayer_object_add(Main *bmain,
     return false;
   }
 
-  collection = collection_parent_editable_find_recursive(view_layer, collection);
+  collection = BKE_collection_parent_editable_find_recursive(view_layer, collection);
 
   if (collection == NULL) {
     return false;
